<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:background="@color/primary"
        android:padding="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="@dimen/_4sdp"
            android:textColor="@android:color/white"

            android:text="@string/txt_header_search"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_clear"
            android:padding="@dimen/_5sdp"
            android:tint="@color/white"
            android:layout_margin="@dimen/_2sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtjobid"
        android:maxLines="1"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/tv_jobid"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtvhcleid"
        android:inputType="text"
        android:maxLines="1"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/tv_vehicleid"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtcustomername"
        android:inputType="text"
        android:maxLines="1"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/txt_customername"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>


    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/txt_Status"
            android:fontFamily="@font/inter_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyc_status"
            android:orientation="horizontal"
            tools:itemCount="2"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>





    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:fontFamily="@font/inter_bold"
            android:id="@+id/btn_cancel"
            android:background="@color/background"
            android:text="@string/btn_txt_cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:id="@+id/btn_Search"
            android:textColor="@color/white"
            android:background="@color/primary"
            android:text="@string/btn_txt_search"/>

    </LinearLayout>


</LinearLayout>