<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.supervisor.view.AddService_Fragment">

  <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
      android:id="@+id/swiprefresh"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:scrollbarSize="10dp"
          android:scrollbars="vertical">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/_5sdp"
              android:background="@color/card_background"
              android:orientation="vertical">

              <androidx.appcompat.widget.AppCompatTextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/_5sdp"
                  android:layout_marginTop="@dimen/_10sdp"
                  android:layout_marginEnd="@dimen/_4sdp"
                  android:fontFamily="@font/inter_bold"
                  android:paddingLeft="@dimen/_10sdp"
                  android:paddingTop="@dimen/_10sdp"
                  android:paddingEnd="@dimen/_10sdp"
                  android:text="@string/tv_pendingJobs"
                  android:textColor="@color/black"
                  android:textSize="@dimen/_13sdp" />


              <androidx.appcompat.widget.AppCompatTextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/_5sdp"
                  android:layout_marginTop="@dimen/_4sdp"
                  android:layout_marginEnd="@dimen/_4sdp"
                  android:fontFamily="@font/inter_medium"
                  android:paddingLeft="@dimen/_10sdp"
                  android:paddingEnd="@dimen/_10sdp"
                  android:text="@string/tv_search_through"
                  android:textColor="@color/greycolor"
                  android:textSize="@dimen/_11sdp" />


              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="@dimen/_11sdp">

                      <androidx.appcompat.widget.AppCompatEditText
                          android:id="@+id/etjobid"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:background="@drawable/bg_edit_text"
                          android:hint="@string/tv_jobid"
                          android:inputType="text"
                          android:maxLines="1"
                          android:padding="10dp" />


                      <androidx.appcompat.widget.AppCompatEditText
                          android:id="@+id/etcustomername"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/_10sdp"
                          android:layout_weight="2"
                          android:background="@drawable/bg_edit_text"
                          android:hint="@string/tv_customername"
                          android:maxLines="1"
                          android:padding="10dp" />


                      <!--                <EditText-->
                      <!--                    android:id="@+id/etcustomername"-->
                      <!--                    android:layout_weight="3"-->
                      <!--                    android:layout_width="0dp"-->
                      <!--                    android:layout_marginLeft="@dimen/_10sdp"-->
                      <!--                    android:layout_height="wrap_content"-->
                      <!--                    android:background="@drawable/bg_edit_text"-->
                      <!--                    android:hint="@string/tv_customername"-->
                      <!--                    android:padding="10dp"-->
                      <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
                      <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                      <!--                    app:layout_constraintStart_toStartOf="parent"-->
                      <!--                    app:layout_constraintTop_toTopOf="parent" />-->


                  </LinearLayout>

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:paddingLeft="@dimen/_11sdp"
                      android:paddingRight="@dimen/_11sdp"
                      android:paddingBottom="@dimen/_11sdp">

                      <androidx.appcompat.widget.AppCompatEditText
                          android:id="@+id/etvehicleid"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="3"
                          android:background="@drawable/bg_edit_text"
                          android:hint="@string/tv_vehicleid"
                          android:inputType="text"
                          android:maxLines="1"
                          android:padding="10dp"
                          app:layout_constraintBottom_toBottomOf="parent"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent" />


                      <androidx.constraintlayout.widget.ConstraintLayout
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/_10sdp"
                          android:layout_marginRight="3dp"
                          android:layout_weight="3"
                          android:background="@drawable/bg_edit_text"
                          android:orientation="horizontal"
                          android:padding="10dp">

                          <androidx.appcompat.widget.AppCompatSpinner
                              android:id="@+id/pendingjobspinner"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_centerVertical="true"
                              android:layout_gravity="center"
                              android:layout_marginLeft="@dimen/_2sdp"
                              android:background="@android:color/transparent"
                              android:gravity="center"
                              android:paddingRight="@dimen/_18sdp"
                              android:spinnerMode="dropdown"
                              android:theme="@style/spinnerTheme"
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintLeft_toLeftOf="parent"
                              app:layout_constraintRight_toRightOf="parent"
                              app:layout_constraintTop_toTopOf="parent" />

                          <androidx.appcompat.widget.AppCompatImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="center"
                              android:src="@drawable/arrow_drop_down"
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintRight_toRightOf="parent"
                              app:layout_constraintTop_toTopOf="parent" />

                      </androidx.constraintlayout.widget.ConstraintLayout>

                      <androidx.appcompat.widget.AppCompatButton
                          android:id="@+id/btn_Search"
                          android:minHeight="@dimen/_34sdp"
                          android:padding="@dimen/_5sdp"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginLeft="@dimen/_5sdp"
                          android:background="@drawable/rectangle_button_api"
                          android:text="@string/tv_btn_search"
                          android:textAllCaps="false"
                          android:textColor="@color/white" />


                  </LinearLayout>


              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">


              </LinearLayout>

              <HorizontalScrollView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:fillViewport="true"
                  android:scrollbars="none">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingLeft="@dimen/_10sdp"
                      android:paddingEnd="@dimen/_10sdp">

                      <TableLayout
                          android:id="@+id/table_heading_layout"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="@dimen/_5sdp"
                          android:layout_marginTop="@dimen/_10sdp"
                          android:layout_marginEnd="@dimen/_4sdp"
                          android:nestedScrollingEnabled="false"
                          android:stretchColumns="1,2,3"
                          app:layout_constraintLeft_toLeftOf="parent"
                          app:layout_constraintTop_toTopOf="parent">

                          <TableRow>

                              <TextView
                                  style="@style/table_header"
                                  android:layout_width="@dimen/jobid_column_width"
                                  android:layout_height="@dimen/_30sdp"
                                  android:layout_column="1"
                                  android:paddingEnd="@dimen/_5sdp"
                                  android:text="@string/tv_jobid"
                                  android:textAlignment="center" />

                              <TextView
                                  style="@style/table_header"
                                  android:layout_width="@dimen/vehicleid_column_width"
                                  android:layout_height="@dimen/_30sdp"
                                  android:layout_column="1"
                                  android:paddingEnd="@dimen/_5sdp"
                                  android:text="@string/tv_vehicleid"
                                  android:textAlignment="center" />

                              <TextView
                                  style="@style/table_header"
                                  android:layout_width="@dimen/custname_column_width"
                                  android:layout_height="@dimen/_30sdp"
                                  android:layout_column="1"
                                  android:paddingEnd="@dimen/_5sdp"
                                  android:text="@string/tv_customername"
                                  android:textAlignment="center" />

                              <TextView
                                  style="@style/table_header"
                                  android:layout_width="@dimen/desc_column_width"
                                  android:layout_height="@dimen/_30sdp"
                                  android:layout_column="2"
                                  android:paddingEnd="@dimen/_5sdp"
                                  android:text="@string/tv_description"
                                  android:textAlignment="center" />

                              <TextView
                                  style="@style/table_header"
                                  android:layout_width="@dimen/status_column_width"
                                  android:layout_height="@dimen/_30sdp"
                                  android:layout_column="1"
                                  android:paddingEnd="@dimen/_5sdp"
                                  android:text="@string/tv_status"
                                  android:textAlignment="center" />
                          </TableRow>
                      </TableLayout>

                      <androidx.recyclerview.widget.RecyclerView
                          android:id="@+id/table_recycler_view"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_below="@+id/table_heading_layout"
                          android:layout_marginStart="@dimen/_5sdp"
                          android:layout_marginEnd="@dimen/_5sdp"
                          android:minWidth="200dp"
                          android:nestedScrollingEnabled="false"
                          app:layout_constraintLeft_toLeftOf="parent"
                          app:layout_constraintRight_toRightOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/table_heading_layout">

                      </androidx.recyclerview.widget.RecyclerView>

                  </LinearLayout>
              </HorizontalScrollView>

              <LinearLayout
                  android:padding="@dimen/_8sdp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:layout_marginTop="@dimen/_16sdp"
                  android:gravity="right"
                  android:orientation="horizontal"
                  android:paddingTop="@dimen/_16sdp"
                  android:paddingBottom="@dimen/_16sdp">


                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="@dimen/_6sdp"
                      android:layout_marginRight="@dimen/_15sdp">

                      <androidx.appcompat.widget.AppCompatTextView
                          android:id="@+id/tv_currentpage"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="1" />

                      <androidx.appcompat.widget.AppCompatTextView

                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="-"
                          android:textColor="@color/black" />

                      <androidx.appcompat.widget.AppCompatTextView
                          android:id="@+id/tv_totalpage"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="1" />

                      <androidx.appcompat.widget.AppCompatTextView
                          android:id="@+id/tv_txtof"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text=" of " />

                      <androidx.appcompat.widget.AppCompatTextView
                          android:id="@+id/tv_totalitem"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="10" />

                  </LinearLayout>


                  <androidx.appcompat.widget.AppCompatImageView
                      android:id="@+id/btn_pending_jobs_backword"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="?attr/selectableItemBackgroundBorderless"
                      android:clickable="true"
                      android:minWidth="@dimen/arrow_btn_size"
                      android:minHeight="@dimen/arrow_btn_size"
                      android:padding="@dimen/_5sdp"
                      android:src="@drawable/arrow_backword" />

                  <androidx.appcompat.widget.AppCompatImageView

                      android:id="@+id/btn_pending_jobs_forword"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:background="?attr/selectableItemBackgroundBorderless"
                      android:clickable="true"
                      android:minWidth="@dimen/arrow_btn_size"
                      android:minHeight="@dimen/arrow_btn_size"
                      android:padding="@dimen/_5sdp"
                      android:src="@drawable/arrow_forward" />

              </LinearLayout>


          </LinearLayout>
      </androidx.core.widget.NestedScrollView>

  </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>